# ESP32-ChunFeng

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/common/: esp_gmf_gpio_config.h  esp_gmf_setup_peripheral.c
components/network/: CMakeLists.txt
components/network/include/: bsp_config_network.hpp  bsp_config_network_page.h  bsp_wifi.hpp  config_manager.hpp  lte_manager.hpp  wifi_manager.hpp
components/network/src/: bsp_config_network.cpp  bsp_wifi.cpp  config_manager.cpp  lte_manager.cpp  wifi_manager.cpp
components/system_common/: CMakeLists.txt  esp_gmf_app_sys.c  esp_gmf_gpio_config.h  esp_gmf_setup_peripheral.c  esp_gmf_setup_peripheral.h  esp_gmf_setup_pool.c  esp_gmf_setup_pool.h
main/: AudioManager.hpp  CMakeLists.txt  ChunFeng.cpp  ChunFeng.hpp  CozeManager.hpp  Kconfig.projbuild  NetworkManager.cpp  NetworkManager.hpp  WebManager.hpp  http_server.c  idf_component.yml  main.c  main.cpp
main/app_audio/: app_audio.c  audio_board.c  audio_board.h  audio_processor.c
main/app_coze/: coze_chat_app.c  coze_chat_app.h
main/app_network/: app_network.c  app_network.h  http_server.c  ml307_wrapper.cpp  ml307_wrapper.h  wifi_manager.c  wifi_manager.h
main/esp_network/: esp_network.c  esp_network.h  http_server.c  http_server.h  wifi_manager.c
main/include/: audio_manager.hpp  backend_manager.hpp  coze_manager.hpp  display_manager.hpp  network_manager.hpp  system_state.hpp
main/src/: network_manager.cpp
